Se renombró la carpeta html a pages, cambiamos los guiones bajos de los archivos utilizados por guiones medios, y cambié el lang del sistema de en a es

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -29,23 +29,23 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/ultimo_disco.html">Último Disco</a>
+                        <a class="nav-link" href="pages/ultimo-disco.html">Último Disco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/proximos_shows.html">Próximos Shows</a>
+                        <a class="nav-link" href="pages/proximos-shows.html">Próximos Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/discos.html">Discos</a>
+                        <a class="nav-link" href="pages/discos.html">Discos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/biografia.html">Biografía</a>
+                        <a class="nav-link" href="pages/biografia.html">Biografía</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/contacto.html">Contacto</a>
+                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </nav>
-            <a class="navbar-brand" href="index.html"><img src="img/la_renga.png" alt="Logo de La Renga"
+            <a class="navbar-brand" href="index.html"><img src="img/la-renga.png" alt="Logo de La Renga"
                     class="logo"></a>
         </div>
     </header>
