--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -28,10 +28,10 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ultimo_disco.html">Último Disco</a>
+                        <a class="nav-link" href="ultimo-disco.html">Último Disco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="proximos_shows.html">Próximos Shows</a>
+                        <a class="nav-link" href="proximos-shows.html">Próximos Shows</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="discos.html">Discos</a>
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
             </nav>
-            <a class="navbar-brand" href="../index.html"><img src="../img/la_renga.png" alt="Logo de La Renga"
+            <a class="navbar-brand" href="../index.html"><img src="../img/la-renga.png" alt="Logo de La Renga"
                     class="logo"></a>
         </div>
     </header>
@@ -105,9 +105,9 @@
                 argentinos para colaborar con la causa.</p>
         </div>
         <div class="row">
-            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia_1.jpg" alt="Biografia 1">
-            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia_3.jpg" alt="Biografia 1">
-            <img class="img-fluid col-xl-4 col-md-12 my-2" src="../img/biografia_5.jpg" alt="Biografia 1">
+            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia-1.jpg" alt="Foto Biografia 1">
+            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia-3.jpg" alt="Foto Biografia 3">
+            <img class="img-fluid col-xl-4 col-md-12 my-2" src="../img/biografia-5.jpg" alt="Foto Biografia 5">
         </div>
         <div class="container-fluid my-3">
             <p class="biografiaParrafo">La gira de 1998 llevó a La Renga por el resto de las provincias argentinas, y
@@ -168,9 +168,9 @@
                 cuatro videos.</p>
         </div>
         <div class="row">
-            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia_2.jpg" alt="Biografia 3">
-            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia_4.jpg" alt="Biografia 3">
-            <img class="img-fluid col-xl-4 col-md-12 my-2" src="../img/biografia_6.jpg" alt="Biografia 3">
+            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia-2.jpg" alt="Foto Biografia 2">
+            <img class="img-fluid col-xl-4 col-md-6 col-sm-12 my-2" src="../img/biografia-4.jpg" alt="Foto Biografia 4">
+            <img class="img-fluid col-xl-4 col-md-12 my-2" src="../img/biografia-6.jpg" alt="Foto Biografia 6">
         </div>
         <div class="container-fluid my-3">
             <p class="biografiaParrafo">Los shows fueron engrosando esta extensa trayectoria. Se presentaron en el
