--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -28,10 +28,10 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ultimo_disco.html">Último Disco</a>
+                        <a class="nav-link" href="ultimo-disco.html">Último Disco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="proximos_shows.html">Próximos Shows</a>
+                        <a class="nav-link" href="proximos-shows.html">Próximos Shows</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="discos.html">Discos</a>
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
             </nav>
-            <a class="navbar-brand" href="../index.html"><img src="../img/la_renga.png" alt="Logo de La Renga"
+            <a class="navbar-brand" href="../index.html"><img src="../img/la-renga.png" alt="Logo de La Renga"
                     class="logo"></a>
         </div>
     </header>
