--- a/pages/discos.html
+++ b/pages/discos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -28,10 +28,10 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ultimo_disco.html">Último Disco</a>
+                        <a class="nav-link" href="ultimo-disco.html">Último Disco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="proximos_shows.html">Próximos Shows</a>
+                        <a class="nav-link" href="proximos-shows.html">Próximos Shows</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="discos.html">Discos</a>
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
             </nav>
-            <a class="navbar-brand" href="../index.html"><img src="../img/la_renga.png" alt="Logo de La Renga"
+            <a class="navbar-brand" href="../index.html"><img src="../img/la-renga.png" alt="Logo de La Renga"
                     class="logo"></a>
         </div>
     </header>
@@ -56,7 +56,7 @@
         <!-- Esquivando Charcos Card -->
         <section class="container-fluid row">
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/esquivando_charcos.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/esquivando-charcos.jpg"
                     alt="Disco Esquivando Charcos" data-bs-toggle="modal" data-bs-target="#esquivandoCharcosModal">
                 <figcaption>
                     <div class="discosItalic discosBold">ESQUIVANDO CHARCOS</div>
@@ -95,7 +95,7 @@
 
             <!-- A Donde Me Lleva La Vida Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/a_donde_me_lleva_la_vida.png"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/a-donde-me-lleva-la-vida.png"
                     alt="Disco A Donde Me Lleva La Vida" data-bs-toggle="modal"
                     data-bs-target="#aDondeMeLlevaLaVidaModal">
                 <figcaption>
@@ -137,7 +137,7 @@
 
             <!-- Despedazado Por Mil Partes Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/despedazado_por_mil_partes.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/despedazado-por-mil-partes.jpg"
                     alt="Disco Despedazado Por Mil Partes" data-bs-toggle="modal"
                     data-bs-target="#despedazadoPorMilPartesModal">
                 <figcaption>
@@ -179,7 +179,7 @@
 
             <!-- La Renga Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/la_renga.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/la-renga.jpg"
                     alt="Disco La Renga" data-bs-toggle="modal" data-bs-target="#laRengaModal">
                 <figcaption>
                     <div class="discosItalic discosBold">LA RENGA</div>
@@ -220,7 +220,7 @@
 
             <!-- La Esquina Del Infinito Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/la_esquina_del_infinito.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/la-esquina-del-infinito.jpg"
                     alt="Disco La Esquina Del Infinito" data-bs-toggle="modal"
                     data-bs-target="#laEsquinaDelInfinitoModal">
                 <figcaption>
@@ -263,7 +263,7 @@
 
             <!-- Detonador De Sueños Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/detonador_de_sueños.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/detonador-de-sueños.jpg"
                     alt="Disco Detonador De Sueños" data-bs-toggle="modal" data-bs-target="#detonadorDeSueñosModal">
                 <figcaption>
                     <div class="discosItalic discosBold">DETONADOR DE SUEÑOS</div>
@@ -359,7 +359,7 @@
 
             <!-- Algún Rayo Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/algun_rayo.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/algun-rayo.jpg"
                     alt="Disco Algún Rayo" data-bs-toggle="modal" data-bs-target="#algunRayoModal">
                 <figcaption>
                     <div class="discosItalic discosBold">ALGÚN RAYO</div>
@@ -401,7 +401,7 @@
 
             <!-- Pesados Vestigios Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/pesados_vestigios.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/pesados-vestigios.jpg"
                     alt="Disco Pesados Vestigios" data-bs-toggle="modal" data-bs-target="#pesadosVestigiosModal">
                 <figcaption>
                     <div class="discosItalic discosBold">PESADOS VESTIGIOS</div>
@@ -442,7 +442,7 @@
 
             <!-- Alejado De La Red Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/alejado_de_la_red.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/alejado-de-la-red.jpg"
                     alt="Disco Alejado De La Red" data-bs-toggle="modal" data-bs-target="#alejadoDeLaRedModal">
                 <figcaption>
                     <div class="discosItalic discosBold">ALEJADO DE LA RED</div>
@@ -486,7 +486,7 @@
 
             <!-- Bailando En Una Pata Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/bailando_en_una_pata.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/bailando-en-una-pata.jpg"
                     alt="Bailando En Una Pata" data-bs-toggle="modal" data-bs-target="#bailandoEnUnaPataModal">
                 <figcaption>
                     <div class="discosItalic discosBold">BAILANDO EN UNA PATA</div>
@@ -530,7 +530,7 @@
 
             <!-- Insoportablemente Vivo Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/insoportablemente_vivo.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/insoportablemente-vivo.jpg"
                     alt="Disco Insoportablemente Vivo" data-bs-toggle="modal"
                     data-bs-target="#insoportablementeVivoModal">
                 <figcaption>
@@ -598,7 +598,7 @@
 
             <!-- En El Ojo Del Huracán Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
-                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/en_el_ojo_del_huracan.jpg"
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/en-el-ojo-del-huracan.jpg"
                     alt="Disco En El Ojo Del Huracán" data-bs-toggle="modal" data-bs-target="#enElOjoDelHuracanModal">
                 <figcaption>
                     <div class="discosItalic discosBold">EN EL OJO DEL HURACÁN</div>
