--- a/pages/ultimo-disco.html
+++ b/pages/ultimo-disco.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -28,10 +28,10 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="ultimo_disco.html">Último Disco</a>
+                        <a class="nav-link active" href="ultimo-disco.html">Último Disco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="proximos_shows.html">Próximos Shows</a>
+                        <a class="nav-link" href="proximos-shows.html">Próximos Shows</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="discos.html">Discos</a>
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
             </nav>
-            <a class="navbar-brand" href="../index.html"><img src="../img/la_renga.png" alt="Logo de La Renga"
+            <a class="navbar-brand" href="../index.html"><img src="../img/la-renga.png" alt="Logo de La Renga"
                     class="logo"></a>
         </div>
     </header>
@@ -52,7 +52,7 @@
     <main>
         <h1> ÚLTIMO DISCO </h1>
         <div class="container-fluid row pt-2 pb-5">
-            <img class="img-fluid col-xl-6 col-md-12" src="../img/ultimo_disco/ultimo_disco.jpg"
+            <img class="img-fluid col-xl-6 col-md-12" src="../img/ultimo-disco/ultimo-disco.jpg"
                 alt="Ultimo Disco de la Renga">
 
             <div class="col-xl-6 col-md-12 d-flex flex-wrap align-items-center justify-content-center mt-3 mb-5 fs-6">
