Últimos ajustes en el scss

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </header>
 
     <main>
-        <iframe width=" 560" height="315" src="https://www.youtube.com/embed/MvMS45FiQOs?si=7HyXQl8c--RMLf3J"
-            title="YouTube video player" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/MvMS45FiQOs?si=7HyXQl8c--RMLf3J" title="YouTube video player"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen class="video"></iframe>
     </main>
