--- a/pages/discos.html
+++ b/pages/discos.html
@@ -487,7 +487,7 @@
             <!-- Bailando En Una Pata Card -->
             <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
                 <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/bailando-en-una-pata.jpg"
-                    alt="Bailando En Una Pata" data-bs-toggle="modal" data-bs-target="#bailandoEnUnaPataModal">
+                    alt="Disco Bailando En Una Pata" data-bs-toggle="modal" data-bs-target="#bailandoEnUnaPataModal">
                 <figcaption>
                     <div class="discosItalic discosBold">BAILANDO EN UNA PATA</div>
                     <div class="discosItalic">1995</div>
