--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -104,8 +104,7 @@
                     <input type="tel" id="telefono" placeholder="Ej. 1123456789" required>
                 </div>
                 <div class="formDiv">
-                    <textarea placeholder="¡Dejanos tu comentario!" id="floatingTextarea"
-                        style="height: 150px"></textarea>
+                    <textarea placeholder="¡Dejanos tu comentario!" id="floatingTextarea"></textarea>
                 </div>
                 <div class="formBotton">
                     <button type="reset" value="Borrar" class="borrarButton">Borrar</button>
