--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="En la sección 'Contacto' de La Renga Rock encontrarás un formulario a completar; una vez registrado, comenzarás a recibir información sobre la banda (tal como próximos shows a realizar por la banda) de manera gratuita e inédita">
-    <title>Contacto &#127928 La Renga Rock</title>
+    <title>Contacto &#127928 La Renga Rock - Suscribite para más noticias al instante</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
