--- a/pages/proximos-shows.html
+++ b/pages/proximos-shows.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Aquí encontrarás información sobre los los próximos shows a realizar por La Renga. Tendrás información sobre el lugar y fecha de los eventos, y la posibilidad de adquirir entradas para los mismos">
-    <title>Shows &#127928 La Renga Rock</title>
+    <title>Shows &#127928 La Renga Rock - Reservá ahora tu lugar</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
