--- a/pages/ultimo-disco.html
+++ b/pages/ultimo-disco.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="En esta sección se menciona el último disco de estudio presentado por La Renga.El mismo fue concebido durante la época de pandemia, y finalmente presentado a inicios del año 2022">
-    <title>Último LP &#127928 La Renga Rock</title>
+    <title>Último LP &#127928 La Renga Rock - Alejado de la Red</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
