Agregué las keywords

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="¡Bienvenidos a La Renga Rock! Esta página web representa un proyecto académico destinado a la creación de una fanpage de La Renga, una banda icónica del rock nacional argentino">
+    <meta name="keywords" content="La Renga, Fanpage, Rock, Rock Nacional, Rock Nacional Argentino">
     <title>La Renga Rock - ¡La fanpage N°1 elegida por el pueblo rengo!</title>
     <link rel="shortcut icon" href="img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
