--- a/pages/ultimo-disco.html
+++ b/pages/ultimo-disco.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="En esta sección se menciona el último disco de estudio presentado por La Renga.El mismo fue concebido durante la época de pandemia, y finalmente presentado a inicios del año 2022">
+    <meta name="keywords"
+        content="La Renga, Fanpage, Rock, Rock Nacional, Rock Nacional Argentino, Último Disco, Disco Actual, Alejado de la Red">
     <title>Último LP &#127928 La Renga Rock - Alejado de la Red</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
