--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="En la sección 'Biografía' de La Renga Rock encontrarás información relevante sobre los inicios de la banda, algunos de los momentos más importante de su recorrido musical, y detalles de actualidad">
+    <meta name="keywords"
+        content="La Renga, Fanpage, Rock, Rock Nacional, Rock Nacional Argentino, Biografía, Historia">
     <title>Biografía &#127928 La Renga Rock - Conocé más sobre La Renga</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
