--- a/pages/discos.html
+++ b/pages/discos.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="En esta sección encontrarás toda la discografía lanzada por La Renga (con sus respectivas imágenes), tanto aquellos discos realizados en estudio, como los recitales en vivo más importantes">
+    <meta name="keywords"
+        content="La Renga, Fanpage, Rock, Rock Nacional, Rock Nacional Argentino, Discografía, Discos, CD, DVD, Vivo">
     <title>Discos &#127928 La Renga Rock - Discografía completa de La Renga</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
