--- a/pages/proximos-shows.html
+++ b/pages/proximos-shows.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Aquí encontrarás información sobre los los próximos shows a realizar por La Renga. Tendrás información sobre el lugar y fecha de los eventos, y la posibilidad de adquirir entradas para los mismos">
+    <meta name="keywords"
+        content="La Renga, Fanpage, Rock, Rock Nacional, Rock Nacional Argentino, Shows, Recitales, Vivo">
     <title>Shows &#127928 La Renga Rock - Reservá ahora tu lugar</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
