--- a/pages/ultimo-disco.html
+++ b/pages/ultimo-disco.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -55,7 +56,7 @@
         <h1> ÚLTIMO DISCO </h1>
         <div class="container-fluid row pt-2 pb-5">
             <img class="img-fluid col-xl-6 col-md-12" src="../img/ultimo-disco/ultimo-disco.jpg"
-                alt="Ultimo Disco de la Renga">
+                alt="Ultimo Disco de la Renga" data-aos="fade-right">
 
             <div class="col-xl-6 col-md-12 d-flex flex-wrap align-items-center justify-content-center mt-3 mb-5 fs-6">
                 <p class="ultimoDiscoParrafo"><span class="ultimoDiscoBold">Alejado de la red</span> es el doceavo álbum
@@ -113,6 +114,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+
+    <!-- AOS CSS SCRIPT -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 </body>
 
 </html>
