--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,9 @@
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -121,20 +123,20 @@
         data-bs-theme="dark">
         <span class="text-light d-none d-md-block"> ¡El Rock & Roll no morirá jamas! </span>
         <div>
-            <a aria-current="page" href="https://www.facebook.com/larenga/?locale=es_LA" target="_blank"><img
-                    src="../img/facebook.png" alt="Facebook" class="redSocial mx-2"></a>
+            <a aria-current="page" href="https://www.facebook.com/larenga/?locale=es_LA" target="_blank"><i
+                    class="fa-brands fa-facebook fa-lg redSocial mx-2"></i></a>
 
             <a href="https://twitter.com/larenga?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                target="_blank"><img src="../img/twitter.png" alt="Twitter" class="redSocial mx-2"></a>
+                target="_blank"><i class="fa-brands fa-twitter fa-lg redSocial mx-2"></i></a>
 
-            <a href="https://open.spotify.com/intl-es/artist/30fEdZPXgWfC4sNttcyB3C" target="_blank"><img
-                    src="../img/spotify.png" alt="Spotify" class="redSocial mx-2"></a>
+            <a href="https://open.spotify.com/intl-es/artist/30fEdZPXgWfC4sNttcyB3C" target="_blank"><i
+                    class="fa-brands fa-spotify fa-lg redSocial mx-2"></i></a>
 
             <a href="https://www.instagram.com/larenga/?utm_source=ig_embed&ig_rid=745ecbf7-c56f-4bf2-8572-fcd8352415a3"
-                target="_blank"><img src="../img/instagram.png" alt="Instagram" class="redSocial mx-2"></a>
+                target="_blank"><i class="fa-brands fa-instagram fa-lg redSocial mx-2"></i></a>
 
-            <a href="https://www.youtube.com/@larenga" target="_blank"><img src="../img/youtube.png" alt="Youtube"
-                    class="redSocial mx-2"></a>
+            <a href="https://www.youtube.com/@larenga" target="_blank"><i
+                    class="fa-brands fa-youtube fa-lg redSocial mx-2"></i></a>
         </div>
     </footer>
 
